--- a/dribbble/src/main/res/values/strings.xml
+++ b/dribbble/src/main/res/values/strings.xml
@@ -1,8 +1,17 @@
 <resources>
-    <string name="app_name">设了个计</string>
+    <string name="app_name">Design</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="tab_title_shots">Shots</string>
+    <string name="tab_title_designs">Designs</string>
+    <string name="tab_title_teams">Teams</string>
+    <string name="tab_title_stories">Stories</string>
+    <string name="tab_title_meetups">Meetups</string>
+    <string name="tab_title_shop">Shop</string>
+    <string name="tab_title_jobs">Jobs</string>
+
 </resources>
