--- a/dribbble/src/main/res/values-zh-rCN/strings.xml
+++ b/dribbble/src/main/res/values-zh-rCN/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">Desssign</string>
+    <string name="app_name">设了个计</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">设置</string>
 
     <string-array name="tab_titles">
         <item>Shots</item>
